2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Moved
	  PlatformService to MD.Core.Gui. Removed old FileIconService class, which
	  is now implemented in PlatformService.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Bump add-in versions.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	  Use the PlatformService to get mime information instead of Gnome.Vfs
	* MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs: Remove unused
	  Gnome widgets.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.SourceEditor.mdp: Moved SourceEditor2 back to
	  main.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.mdp: Directory reorganization.

2007-12-01  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Removed
 	  unnecessary parse call.
 	* MonoDevelop.SourceEditor.addin.xml: Added help command to context menu. 

2007-11-19  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: LineCountChanged now
	  sends a negative count if lines were removed again.

2007-11-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: fixed "Bug
	  341880 - Find and Whole words only".

2007-11-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed "Bug
	  341886 - Quick Class navigator does not sort file types".

2007-11-14  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Implemented a
	  workaround for "Bug 341762 - Some TextIters should be passed by ref" as
	  a partial fix for "Bug 341319 - Tab not working correctly". Also added a
	  catch for infinite recursion in OnTextChanged, which additionally stops